Ainda tentando fazer a conexão cliente-servidor 6

--- a/src/views/receivingEmail.handlebars
+++ b/src/views/receivingEmail.handlebars
@@ -13,6 +13,7 @@
     <main>
       <div class="mainBody">
         <div class="center-box">
+          <h1>Conteúdo da mensagem:</h1>
             <p>{{ emailContent }}</p>
           </div>
         </div>
